map page alignment issue fixed

--- a/app/assets/stylesheets/styles.less
+++ b/app/assets/stylesheets/styles.less
@@ -768,7 +768,6 @@ table th {
 #feed_map {
 .float-left;
 height:746px;
-margin-bottom:100px;
          
 	 iframe {
 		.float-left;
